--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "sass": "^1.80.4"
+    "sass": "^1.80.4",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/validator": "^13.12.2",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "typescript": "^5"
